remove nodemon due to security issue

--- a/package.json
+++ b/package.json
@@ -25,7 +25,5 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.5"
-  }
+  "devDependencies": {}
 }
